Fix bottom padding on mobile in Press section

--- a/assets/css.esdynamo/_structure.scss
+++ b/assets/css.esdynamo/_structure.scss
@@ -200,6 +200,10 @@ header {
 	.col:nth-child(2n+1):nth-last-child(-n+2) ~ .col {
 	    padding-bottom: 0;
 	}
+	#press .col:nth-child(2n+1):nth-last-child(-n+2),
+	#press .col:nth-child(2n+1):nth-last-child(-n+2) ~ .col {
+		padding-bottom: 1rem;
+	}
 }
 @media (min-width: 64em) {
 	.col:nth-child(3n+1):nth-last-child(-n+3),
